--- a/final.css
+++ b/final.css
@@ -13,7 +13,6 @@
     font-size: 14px;
     padding: 6px 12px;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    width: 40%;
     align-items: center;
     justify-content: center;
     margin:20px 30% 30px 30%;
@@ -100,12 +99,16 @@
     align-self: center;
     color: rgb(0, 0, 0);
 }
-#card-deck p{
-    font-size: 20px;
-    font-weight: 400;
-    margin: 10px;
+#card-deck .card{
+    width: 100%;
+    height: 100%;
     align-items: center;
     justify-content: center;
     align-self: center;
-    color: rgb(28, 16, 16);
+    display: flex;
+    flex-direction: column;
+    background: rgb(238, 250, 255);
+    margin: 10px;
+    padding: 10px;
+    border-radius: 15px;
 }
